--- a/src/app/file-upload-home/child_components/mobile-user-upload/mobile-user-upload.component.scss
+++ b/src/app/file-upload-home/child_components/mobile-user-upload/mobile-user-upload.component.scss
@@ -225,6 +225,13 @@ input {
 
 }
 
+.modal-title{
+    font-family: sans-serif;
+    font-weight: 600;
+    color: #000;
+    font-size: 1.2em;
+}
+
 .uploadStatusCardExtended {
     //    min-height: 70vh;
     height: auto;
